--- a/mywebsite/mywebsite/accounts/templates/accounts/dashboard.html
+++ b/mywebsite/mywebsite/accounts/templates/accounts/dashboard.html
@@ -14,11 +14,13 @@
 			<a class="btn btn-primary  btn-sm btn-block" href="">Create Customer</a>
 			<table class="table table-sm">
 				<tr>
+					<th></th>
 					<th>Customer</th>
 					<th>Phone</th>
 				</tr>
 				{% for customer in customers %}
 					<tr>
+						<td><a class="btn btn-outline-info btn-sm" href="{% url 'customer' customer.id %}">view</a></td>
 						<td>{{customer.name}}</td>
 						<td>{{customer.phone}}</td>
 					</tr>
@@ -31,7 +33,7 @@
 		<h5>LAST 5 ORDERS</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-primary  btn-sm btn-block" href="">Create Order</a>
+			<a class="btn btn-primary  btn-sm btn-block" href="{% url 'create_order' %}">Create Order</a>
 			<table class="table table-sm">
 				<tr>
 					<th>Product</th>
@@ -45,8 +47,8 @@
 						<td>{{order.product}}</td>
 						<td>{{order.date_created}}</td>
 						<td>{{order.status}}</td>
-						<td><a  href="">Update</a> </td>
-						<td><a href="">Delete</a> </td>
+						<td><a class="btn btn-outline-info btn-sm" href="{% url 'update_order' order.id %}">Update</a> </td>
+						<td><a class="btn btn-outline-danger btn-sm" href="{% url 'delete_order' order.id %}">Delete</a> </td>
 					</tr>
 				{% endfor %}
 			</table>
