added reg/log form, configured admin panel

--- a/mywebsite/mywebsite/accounts/templates/accounts/order_form.html
+++ b/mywebsite/mywebsite/accounts/templates/accounts/order_form.html
@@ -3,12 +3,16 @@
 {% block content %}
 
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-5">
    <div class="card card-body">
 
 <form action="" method="POST">
   {% csrf_token %}
-  {{form}}
+    {{ formset.management_form }}
+    {% for form in formset %}
+        {{form}}
+        <hr>
+    {% endfor %}
   <input type="submit" name="Submit">
 </form>
    </div>
