--- a/mywebsite/mywebsite/accounts/templates/accounts/delete.html
+++ b/mywebsite/mywebsite/accounts/templates/accounts/delete.html
@@ -6,7 +6,7 @@
   <div class="col-md-6">
    <div class="card card-body">
 
-<p>Are ypu sure want to delete "{{item}}"?</p>
+<p>Are you sure want to delete "{{item}}"?</p>
 <form action="{% url 'delete_order' item.id %}" method="POST">
   {% csrf_token %}
   <a class="btn btn-outline-warning" href="{% url 'home' %}">Cancel</a>
