--- a/mywebsite/mywebsite/accounts/templates/accounts/main.html
+++ b/mywebsite/mywebsite/accounts/templates/accounts/main.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<!DOCTYPE html>
+<!DOCTYPE <html></html>
 <html>
 <head>
 	<title>CRM</title>
@@ -19,7 +19,6 @@
 	{% endblock %}
     </div>
 	<hr>
-	<h5>Our footer</h5>
 
 </body>
 
